# LKSynthesizeAPP

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CallJava.cpp  CallJava.h  native-lib.cpp  ndkcamera.cpp  ndkcamera.h  scrfd.cpp  scrfd.h  scrfdncnn.cpp
app/src/main/java/com/example/lksynthesizeapp/: AllApi.java  MainActivity.java  MyApplication.java  SCRFDNcnn.java  TestActivity.java
app/src/main/java/com/example/lksynthesizeapp/ChiFen/: DemoIntentService.java  LocalActivity.java
app/src/main/java/com/example/lksynthesizeapp/ChiFen/Activity/: BroadcastActivity.java  BroadcastMediaCodecActivity.java  DescernActivity.java  LocalActivity.java  PhotoActivity.java  RobotActivity.java  RobotActivity1.java  VideoActivity.java
app/src/main/java/com/example/lksynthesizeapp/ChiFen/Base/: ImageSave.java  MainUI.java
app/src/main/java/com/example/lksynthesizeapp/ChiFen/MediaCodec/: ScreenLive.java
app/src/main/java/com/example/lksynthesizeapp/ChiFen/Modbus/: MBConnect.java  SocketForModbusTCP.java  SocketForModbusTCPIsNull.java
app/src/main/java/com/example/lksynthesizeapp/ChiFen/test/: ByteUtil.java
app/src/main/java/com/example/lksynthesizeapp/Constant/Base/: AlertDialogUtil.java  Constant.java
app/src/main/java/com/example/lksynthesizeapp/Constant/Net/: getIp.java
app/src/main/java/com/example/lksynthesizeapp/Constant/activity/: DefinedActivity.java  SendSelectActivity.java  WelcomeActivity.java
app/src/main/java/com/example/lksynthesizeapp/View/: CircleTextProgressbar.java
app/src/main/java/com/example/lksynthesizeapp/test/: TestActivity.java
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
app/src/main/res/layout/: activity_broadcast_mediacodec.xml  activity_descern.xml  activity_local.xml  activity_main.xml  activity_photo.xml  activity_robot.xml  activity_send_select.xml  activity_test.xml  activity_video.xml  loading.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
